# state-transition-sdk-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
e2e/: .env.example  .gitignore  Cargo.toml  README.md
e2e/src/: main.rs
examples/: README.md  split.rs  transfer.rs
src/: error.rs  lib.rs  radix.rs
src/api/: certification.rs  certification_request.rs  inclusion_certificate.rs  inclusion_proof.rs  mod.rs  network_id.rs  state_id.rs
src/api/bft/: input_record.rs  mod.rs  root_trust_base.rs  shard_id.rs  shard_tree.rs  unicity_certificate.rs  unicity_seal.rs  unicity_tree.rs
src/cbor/: decode.rs  encode.rs  mod.rs
src/client/: http.rs  mod.rs
src/crypto/: hash.rs  mod.rs  signature.rs  signer.rs
src/payment/: asset.rs  commitment.rs  justification.rs  manifest.rs  mod.rs  proof.rs  split.rs  tests.rs  verifier.rs
src/predicate/: builtin.rs  mod.rs  unlock.rs
src/rsmst/: build.rs  mod.rs  proof.rs
src/smt/: bigint.rs  mod.rs  plain.rs  sum.rs
src/transaction/: certified.rs  ids.rs  mint.rs  minter.rs  mod.rs  token.rs  transfer.rs
src/verify/: context.rs  error.rs  mint_justification.rs  mod.rs
tests/: e2e.rs  http_transport.rs  transition_flow.rs
tests/vectors/: transition_flow.json
